# openmetadata-ingestion-contrib

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  config.example.yaml  pyproject.toml  rest-catalog-parameters.example.json  rest-catalog-parameters.json  workflow.iceberg.yaml  workflow.openlineage.yaml
local-openmetadata-stack/: docker-compose.yml
patch/: config.yml  patch_service_specs.py
patch/ingestion/source/database/mariadb/: service_spec.py
patch/ingestion/source/messaging/kafka/: service_spec.py
src/ingestion_contrib/: patch_service_specs.py
src/ingestion_contrib/ingestion/source/database/iceberg/catalog/: rest.py
src/ingestion_contrib/ingestion/source/database/iceberg_custom/: connection.py  lineage.py  metadata.py  models.py  query_parser.py  service_spec.py
src/ingestion_contrib/ingestion/source/database/iceberg_oauth_fix/: connection.py  service_spec.py
src/ingestion_contrib/ingestion/source/database/iceberg_oauth_fix/catalog/: rest.py
src/ingestion_contrib/ingestion/source/database/iceberg_view_ingestion/: metadata.py  service_spec.py
src/ingestion_contrib/ingestion/source/database/mariadb_example/: service_spec.py
src/ingestion_contrib/ingestion/source/database/trino_custom/: lineage.py  service_spec.py
src/ingestion_contrib/ingestion/source/messaging/kafka_example/: metadata.py  service_spec.py
src/ingestion_contrib/ingestion/source/pipeline/: pipeline_service.py
src/ingestion_contrib/ingestion/source/pipeline/kafkaconnect_debezium/: metadata.py  models.py  service_spec.py
src/ingestion_contrib/ingestion/source/pipeline/openlineage/: metadata.py  models.py
src/ingestion_contrib/ingestion/source/pipeline/openlineage_ext/: metadata.py  models.py  service_spec.py  utils.py
src/ingestion_contrib/kafka/: metadata.py
src/ingestion_contrib/mariadb/: metadata.py
src/ingestion_contrib/mariadb_example/: metadata.py
