[build-system]
requires = ["uv_build >= 0.10.10, <=0.11.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ingestion_contrib"

[tool.uv.sources]
pyiceberg = { path = "./libs/pyiceberg-0.11.0-cp310-cp310-linux_x86_64.whl" }

[project]
name = "openmetadata-ingestion-contrib"
authors = [
    { name = "TIKI GmbH" }
]
# <version core> "-" <pre-release>
version = "0.4.1.dev1"
description = "Framework for customizing existing connectors of the OpenMetadata platform"
requires-python = ">=3.10"
dependencies = [
    "openmetadata-ingestion>=1.9.0,<1.10",
    "PyYAML~=6.0",
    "pyiceberg"
]

[project.urls]
Documentation = "https://github.com/TIKI-Institut/openmetadata-ingestion-contrib/tree/main#readme"
Source = "https://github.com/TIKI-Institut/openmetadata-ingestion-contrib"
Tracker = "https://github.com/TIKI-Institut/openmetadata-ingestion-contrib/issues"

[project.scripts]
patch-service-specs = "ingestion_contrib.patch_service_specs:main"

[tool.setuptools.packages.find]
where = ["./src"]
exclude = ["tests*"]
namespaces = true
